--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-    <video id="video" playsinline autoplay></video>
+<div class="container">
+    <video id="video"playsinline autoplay></video>
     <canvas id="canvas"></canvas>
     </div>
     <Button class="capture">Click Photos</Button>
+    <Button class="download" download="canvas">Save Photos</Button>
     <script src="script.js"></script>
 </body>
 </html>
