--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <canvas id="canvas"></canvas>
     </div>
     <Button class="capture">Click Photos</Button>
-    <button>Save pictures</button>
+    <button>Save captured photo</button>
     <script src="script.js"></script>
 </body>
 </html>
